--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -226,7 +226,7 @@ Psychometrically good items should exhibit various qualities, such as validity a
 
 After examining the distributions to all IAS items, we will analyze the factor structure using two different approaches, namely Exploratory Graph Analysis (EGA) and traditional exploratory and confirmatory Factor Analysis (EFA/CFA).
 
-**TODO: Explain EGA. Rework the following paraphraph**.
+**TODO: Explain EGA. Explain UVA. Rework the following paragraph**.
 
 <!-- was used to estimate the dimensions via network estimation and community detection, alongside assessing the stability of dimensions and items using the bootstrapping techniques [@golino2017exploratory]. -->
 <!-- The selection of EGA was motivated by its capability to handle complex, multidimensional data and provide robust dimension estimates. -->
@@ -239,9 +239,9 @@ We will first apply EFA to... and then identify the best fitting models using CF
 
 <!-- Distributions of items -->
 
-The distribution of the items for all samples suggests the presence of a consistent modal value (@fig-distributions).
+The distribution of the items across samples suggests the presence of a consistent modal value (@fig-distributions).
 In other words, participants are most likely to answer 4/5 (i.e., agree) on most items, with the exception of "affective touch" (**TODO: this one only seem off in ssames 8 no? could it be a language thing?**), "blood sugar", and "bruise", which exhibit a different distributional pattern with a lower mode (\~2/5).
-Additionally, one can note the low occurence of extreme values (1 and 5), meaning that the bulk of answers varies between 3 values (assuming the IAS is implemented as a 5-point Likert scale following its validation).
+Additionally, one can note the low occurrence of extreme values (1 and 5), meaning that the bulk of answers varies between 3 values (assuming the IAS is implemented as a 5-point Likert scale following its validation).
 The samples using an analogue scale (samples 10a, 10b and 10c in the figure **what about 11?**) displaying a more continuous and progressive spread of answers, seemingly improving the interindividual variability, although potentially suggesting a second lower mode at \~2.  
 
 **TODO: add more information to the caption to highlight some interesting things. What are the two items that stand out. Mention caveat that for most samples the undelying data is disrete (Likert scales), and hence the density plots are not the most accurate visualization method but have been chosen as the clearer to highlight what we are interested in.**
@@ -256,19 +256,12 @@ The samples using an analogue scale (samples 10a, 10b and 10c in the figure **wh
 knitr::include_graphics("figures/Figure1.png")
 ```
 
-#### Correlations
 
-The correlation analysis revealed that the items overall have positive intercorrelation patterns with no clear structure emerging.
-This remains the same across all samples.
-However, there are possibly some higher-order groupings emerging for the 2 analog-scale samples.
-
-#### EGA
 <!-- Univariate analysis -->
-The UVA revealed that there are two large to very large redundant variables when taking all samples into account.
-Namely, "itch" and "tickle", where "tickle" should be removed, and "itch" should be kept.
-There are several more items that are moderately to largely redundant, namely, "wind" and "burp", and "urinate" and "defecate".
-On top of that, "sneeze" and "cough", "heart" and "breathing", and "hungry" and "thirsty" seem to have small to moderate redundancy.
-These findings are rather consistent across the samples with minor differences, such as that when the questionnaire had an analog scale, there seems to be no large to very large redundant items but "itch" and "tickle" remain moderately to largely redundant and "heart" and "breathing" small to moderately redundant in one sample.
+The UVA flagged two strongly redundant variables.
+Namely, "itch" and "tickle" - suggesting to remove the latter.
+Several more pairs of items were flagged as moderately redundant ("wind" and "burp"; "urinate" and "defecate") and mildly redundant ("sneeze" and "cough"; "heart" and "breathing"; "hungry" and "thirsty").
+These patterns consistently appeared in most samples when considered individually.
 
 <!-- Network analysis -->
 According to the network analysis, using the Walktrap and Louvain algorithms applied to Glasso networks, a 4-factor structure fits the questionnaire best across all data sets.
@@ -281,6 +274,8 @@ Most items, except for 'affective touch,' demonstrated stability levels exceedin
 These findings underscore the robustness of the identified 4-dimensional structure.
 
 <!-- Factor analysis -->
+**TODO: explain how we obtained the optimal number of factors**
+
 When accounting for all samples, the factor analysis reveals that a 4-factor structure fits best.
 The exploratory factor analysis revealed that 4 latent factors (oblimin rotation) accounted for  41.58% of the total variance of the original data (MR1 = 14.45%, MR3 = 11.76%, MR2 = 8.09%, MR4 = 7.28%).
 
