--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -687,6 +687,17 @@
   month=jun, 
   pages={116–139} }  
 
+@article{golino2020investigating,
+  title={Investigating the performance of exploratory graph analysis and traditional techniques to identify the number of latent factors: A simulation and tutorial.},
+  author={Golino, Hudson and Shi, Dingjing and Christensen, Alexander P and Garrido, Luis Eduardo and Nieto, Maria Dolores and Sadana, Ritu and Thiyagarajan, Jotheeswaran Amuthavalli and Martinez-Molina, Agustin},
+  journal={Psychological methods},
+  volume={25},
+  number={3},
+  pages={292},
+  year={2020},
+  publisher={American Psychological Association}
+}
+
 @article{todd2022,
   title={Are some interoceptive sensibility components more central than others? Using item pool visualisation to understand the psychometric representation of interoception},
   author={Todd, Jennifer and Swami, Viren and Aspell, Jane E and Furnham, Adrian and Horne, George and Stieger, Stefan},
