added section on EGA

--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -6,6 +6,38 @@
 	year = {2012},
 }
 
+@article{markos2024dimensionality,
+  title={Dimensionality assessment in ordinal data: a comparison between parallel analysis and exploratory graph analysis},
+  author={Markos, Angelos and Tsigilis, Nikolaos},
+  journal={Frontiers in Psychology},
+  volume={15},
+  pages={1359111},
+  year={2024},
+  publisher={Frontiers Media SA}
+}
+
+@article{cosemans2022exploratory,
+  title={Exploratory graph analysis for factor retention: Simulation results for continuous and binary data},
+  author={Cosemans, Tim and Rosseel, Yves and Gelper, Sarah},
+  journal={Educational and Psychological Measurement},
+  volume={82},
+  number={5},
+  pages={880--910},
+  year={2022},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{christensen2021equivalency,
+  title={On the equivalency of factor and network loadings},
+  author={Christensen, Alexander P and Golino, Hudson},
+  journal={Behavior research methods},
+  volume={53},
+  number={4},
+  pages={1563--1580},
+  year={2021},
+  publisher={Springer}
+}
+
 @article{shields1989body,
   title={The body awareness questionnaire: reliability and validity},
   author={Shields, Stephanie A and Mallory, Mary E and Simon, Angela},
